--- a/client/src/pages/home-main.css
+++ b/client/src/pages/home-main.css
@@ -65,3 +65,11 @@
 .host-main {
   margin-top: 32px;
 }
+
+.party-subtitle {
+  padding-top: 8px;
+}
+
+.houseparty-invite-list {
+  padding-top: 16px;
+}
