change invite language, put in disclaimer

--- a/client/src/pages/home-main.css
+++ b/client/src/pages/home-main.css
@@ -111,3 +111,10 @@
 .invite-edit-row {
   background: #fbfacf;
 }
+
+.instruction-text {
+  max-width: 800px;
+  color: #666;
+  line-height: normal;
+  font-size: 13px;
+}
